feat: Sign and Login buttons hover

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,12 @@
   border-radius: 24px; 
 }
 
+
+.login-button:hover {
+  background-color: #A6192E !important;
+  border-radius: 24px; 
+}
+
 .signup-button{
   background-color: #ffffff00 !important;
   border-radius: 24px; 
